--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,6 +13,7 @@ services:
             - 8080:8080
         environment:
             - MONGO_HOST=mongodb://mongo:27017
+            # - ACCESS_TOKEN=<some_access_token>
         restart: always
         depends_on: 
             - mongo
